--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <h1> Nick's Gaming Build PC's</h1>
+        <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4"> <a href="index.html"> <strong> <em> Nick's Gaming Build PC's </strong> </em> </a> </h1>
+                </div>
+              </div>
+
     <hr> 
-    <div class="container">
+    <div class="container1">
             
              <div class="list-view">
              </div>
