--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Nick's Gaming PC's</title>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+        <div class="top">
         <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                  <h1 class="display-4"> <a href="index.html"> <strong> <em> Nick's Gaming Build PC's </strong> </em> </a> </h1>
+                  <h1 class="display-4"> <a href="index.html"> <strong> <em> Nick's Gaming PC's </strong> </em> </a> </h1>
                 </div>
               </div>
-
+            </div>
     <hr> 
     <div class="container1">
             
