--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
         <div class="top">
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron">
                 <div class="container">
-                  <h1 class="display-4"> <a href="index.html"> <strong> <em> Nick's Gaming PC's </strong> </em> </a> </h1>
+                  <h1 class="display-4" style="color: black"> <a href="index.html" style="color: black; background-color: white;" > <strong> <em> Nick's Gaming PC's </strong> </em> </a> </h1>
                 </div>
               </div>
             </div>
